# animatic

./: Makefile  README.md  animatic.code-workspace  tsconfig.json
server/: .pdm-python  app.py  jest.config.ts  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20230608205829_initial_migration/: migration.sql
server/src/: app.test.ts  app.ts  frames.ts  main.ts
server/src/middleware/: auth.ts  loaders.ts  validate.ts  validateParamaters.ts
server/src/routes/: frame.test.ts  frame.ts  frameSchemas.ts  image.ts  tackSchemas.ts  track.test.ts  track.ts  trackHelper.ts
server/src/types/: custom.d.ts
server/src/utils/: S3.ts  imageStorage.ts
server/test-fixtures/: utils.ts
web/: package-lock.json  package.json
web/src/: App.tsx  index.tsx
web/src/app/: store.ts
web/src/components/: Cursor.tsx  DrawingArea.tsx  DrawingSurface.tsx  DrawingView.tsx  DrawingWorkspace.tsx  Frame.tsx  Header.tsx  Login.tsx  RequireAuth.tsx  Timeline.tsx  Toolbar.tsx
web/src/features/: animaticApi.tsx  canvasSlice.tsx  projectsSlice.tsx  toolsSlice.tsx
web/src/hooks/: useAuth.tsx
web/src/models/: Frame.ts  Track.ts
web/src/reducers/: canvasSlice.tsx  framesSlice.tsx  projectsSlice.tsx  trackSlice.tsx  tracksSlice.tsx  userSlice.tsx  workspaceSlice.tsx
web/src/utils/: animaticApi.tsx  canvasHelpers.ts
www/: package-lock.json  package.json
www/src/: App.tsx  index.tsx  main.tsx
www/src/app/: store.ts
www/src/components/: Artboard.tsx  Cursor.tsx  DrawingArea.tsx  (+4 more)
(+11 files in other folders)
