
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "black>=23.3.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn main:app --reload"
start = "uvicorn main:app --reload"
